fix: added spacing between headers in js

--- a/src/main/resources/static/css/topTaskSurvey_styles.css
+++ b/src/main/resources/static/css/topTaskSurvey_styles.css
@@ -394,11 +394,6 @@ details:not([open]) > details {
   margin-bottom: 18px;
 }
 
-#topTaskTable td:first-child,
-#topTaskTable th:first-child {
-  padding-right: 30px !important;
-}
-
 #topTaskTable tbody td {
   font-size: 10pt !important;
 }
